NetBSD Problem Report #44041

From www@NetBSD.org  Thu Nov  4 15:55:51 2010
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id B577063BBD5
	for <gnats-bugs@gnats.NetBSD.org>; Thu,  4 Nov 2010 15:55:51 +0000 (UTC)
Message-Id: <20101104155551.886DE63BB30@www.NetBSD.org>
Date: Thu,  4 Nov 2010 15:55:51 +0000 (UTC)
From: roam@ringlet.net
Reply-To: roam@ringlet.net
To: gnats-bugs@NetBSD.org
Subject: libnetpgp: do not send diagnostic messages to the output stream
X-Send-Pr-Version: www-1.0

>Number:         44041
>Category:       lib
>Synopsis:       libnetpgp: do not send diagnostic messages to the output stream
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    agc
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Thu Nov 04 16:00:00 +0000 2010
>Closed-Date:    Thu Nov 04 16:25:28 +0000 2010
>Last-Modified:  Thu Nov 04 16:35:01 +0000 2010
>Originator:     Peter Pentchev
>Release:        
>Organization:
>Environment:
>Description:
Once again, thanks for maintaining netpgp!

When netpgp thinks (even for a little while, even if it should
change its mind almost immediately) that it's processing a detached
signature, it sends a message to that effect to io->outs.  This kind
of interferes with "netpgp --cat" :)
>How-To-Repeat:
Run "netpgp --cat" on the simple clearsigned file available at:
http://devel.ringlet.net/security/netpgp/foo.txt.asc
>Fix:
Apply the trivial patch available at:
http://devel.ringlet.net/security/netpgp/patches/06-output-to-stderr.patch

Keep up the great work!

>Release-Note:

>Audit-Trail:

Responsible-Changed-From-To: lib-bug-people->agc
Responsible-Changed-By: agc@NetBSD.org
Responsible-Changed-When: Thu, 04 Nov 2010 16:25:28 +0000
Responsible-Changed-Why:
I look after netpgp


State-Changed-From-To: open->closed
State-Changed-By: agc@NetBSD.org
State-Changed-When: Thu, 04 Nov 2010 16:25:28 +0000
State-Changed-Why:
I applied the fix in the PR - thanks for provifing this!


From: "Alistair G. Crooks" <agc@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/44041 CVS commit: src/crypto/external/bsd/netpgp/dist/src/lib
Date: Thu, 4 Nov 2010 16:24:23 +0000

 Module Name:	src
 Committed By:	agc
 Date:		Thu Nov  4 16:24:22 UTC 2010

 Modified Files:
 	src/crypto/external/bsd/netpgp/dist/src/lib: validate.c

 Log Message:
 Apply the patch from Peter Pentchev in PR 44041

 	``When netpgp thinks (even for a little while, even if it
 	should change its mind almost immediately) that it's
 	processing a detached signature, it sends a message to that
 	effect to io->outs.
 	This kind of interferes with "netpgp --cat" :)''

 Use io->errs instead of io->outs for the informational message.


 To generate a diff of this commit:
 cvs rdiff -u -r1.40 -r1.41 \
     src/crypto/external/bsd/netpgp/dist/src/lib/validate.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.